compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_no_expressions_after_it.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 4,
            },
            expression: None,
            message: None,
        },
    ),
]
