compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_no_expressions_after_it_but_a_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo as message
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 15,
            },
            expression: None,
            message: Some(
                Var {
                    location: SrcSpan {
                        start: 8,
                        end: 15,
                    },
                    name: "message",
                },
            ),
        },
    ),
]
