compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_panic.snap
---
source: compiler-core/src/parse/tests.rs
expression: "echo panic as \"a\""
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 17,
            },
            expression: Some(
                Panic {
                    location: SrcSpan {
                        start: 5,
                        end: 17,
                    },
                    message: Some(
                        String {
                            location: SrcSpan {
                                start: 14,
                                end: 17,
                            },
                            value: "a",
                        },
                    ),
                },
            ),
        },
    ),
]
