compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_panic_and_messages.snap
---
source: compiler-core/src/parse/tests.rs
expression: "echo panic as \"a\" as \"b\""
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 24,
            },
            expression: Some(
                Panic {
                    location: SrcSpan {
                        start: 5,
                        end: 17,
                    },
                    message: Some(
                        String {
                            location: SrcSpan {
                                start: 14,
                                end: 17,
                            },
                            value: "a",
                        },
                    ),
                },
            ),
            message: Some(
                String {
                    location: SrcSpan {
                        start: 21,
                        end: 24,
                    },
                    value: "b",
                },
            ),
        },
    ),
]
