compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_simple_expression_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo wibble as message
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 22,
            },
            expression: Some(
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 11,
                    },
                    name: "wibble",
                },
            ),
            message: Some(
                Var {
                    location: SrcSpan {
                        start: 15,
                        end: 22,
                    },
                    name: "message",
                },
            ),
        },
    ),
]
