compiler-core/src/parse/snapshots/gleam_core__parse__tests__external_attribute_on_import.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"one\", \"two\")\nimport gleam/io\n"
---
----- SOURCE CODE

@external(erlang, "one", "two")
import gleam/io


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @external(erlang, "one", "two")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ I was expecting a function definition after this
